--- a/src/PortingAssistantExtensionClientShared/Options/DataSharingOptionPage.xaml
+++ b/src/PortingAssistantExtensionClientShared/Options/DataSharingOptionPage.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="PortingAssistantVSExtensionClient.Options.DataSharingOptionPage"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Options"
+             xmlns:PlatformUI="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities" x:Class="PortingAssistantVSExtensionClient.Options.DataSharingOptionPage"
              mc:Ignorable="d" d:DesignWidth="465" Height="300" Width="500">
     <Grid Margin="0,0,0,30">
         <Grid.ColumnDefinitions>
@@ -15,7 +16,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <GroupBox Header="Porting Assistant for .NET" Height="335" Margin="0,10,0,0" Grid.RowSpan="2" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" FontSize="14" Grid.ColumnSpan="2">
+        <GroupBox Name="EnableMetricCheckBox" Header="Porting Assistant for .NET" Height="335" Margin="0,10,0,0" Grid.RowSpan="2" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" FontSize="14" Grid.ColumnSpan="2">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="460"/>
@@ -25,11 +26,55 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <CheckBox x:Name="EnableMetricCheck" Content="I agree to share my usage data with Porting Assistant for .NET and to receive &#xD;&#xA;communications regarding my feedback about the tool." HorizontalAlignment="Left" Margin="5,15,0,0"  Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" Checked="CheckBox_Checked" Height="40" Width="430" Grid.ColumnSpan="2"/>
+                <CheckBox x:Name="EnableMetricCheck" 
+                          Content="I agree to share my usage data with Porting Assistant for .NET and to receive &#xA;communications regarding my feedback about the tool." 
+                          HorizontalAlignment="Left" 
+                          Margin="5,15,0,0"  
+                          Grid.Row="0" 
+                          Grid.Column="0" 
+                          VerticalAlignment="Top" 
+                          Checked="CheckBox_Checked" 
+                          Height="40" 
+                          Width="430" 
+                          Grid.ColumnSpan="2"/>
             </Grid>
         </GroupBox>
-        <GroupBox Header="Porting Assistant for .NET data usage sharing" Height="140" Margin="0,20,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" FontWeight="Bold" Grid.ColumnSpan="2">
-            <TextBlock TextWrapping="Wrap" VerticalAlignment="Top" Height="112" Margin="7,0,-2,0" Grid.Row="0" Grid.Column="0" FontWeight="Normal"><Run BaselineAlignment="TextTop" Text="When you share your usage data, Porting Assistant for .NET collects information only about the public NuGet packages, APIs, build errors, and stack traces. This information is used to make Porting Assistant for .NET better, for example, by improving the package and API replacement recommendations. Porting Assistant for .NET does not collect any identifying information about you. "/><Hyperlink NavigateUri="https://docs.aws.amazon.com/portingassistant/latest/userguide/how-porting-assistant-works.html#porting-assistant-information-collected" Click="Hyperlink_Click">To learn more, see Information Collected</Hyperlink></TextBlock>
+        <GroupBox 
+            Name="DataUsageShareBox"
+            Header="Porting Assistant for .NET data usage sharing" 
+            Height="140" Margin="0,20,0,0" 
+            Grid.Row="1" 
+            Grid.Column="0" 
+            VerticalAlignment="Top" 
+            FontWeight="Bold" 
+            Grid.ColumnSpan="2">
+            <TextBlock
+                TextWrapping="Wrap" 
+                VerticalAlignment="Top" 
+                Height="112" 
+                Margin="7,0,-2,0" 
+                Grid.Row="0" 
+                Grid.Column="0" 
+                FontWeight="Normal">
+                <Run BaselineAlignment="TextTop" 
+                     Text="When you share your usage data, Porting Assistant for .NET collects information only about the public NuGet packages, APIs, build errors, and stack traces. This information is used to make Porting Assistant for .NET better, for example, by improving the package and API replacement recommendations. Porting Assistant for .NET does not collect any identifying information about you. "/>
+                <Hyperlink NavigateUri="https://docs.aws.amazon.com/portingassistant/latest/userguide/how-porting-assistant-works.html#porting-assistant-information-collected" Click="Hyperlink_Click">
+                    <Run Text="To learn more, see Information Collected"/>
+                </Hyperlink>
+            </TextBlock>
+        </GroupBox>
+
+        <GroupBox Name="NoProfileBox" Header="Porting Assistant for .NET" Height="335" Margin="0,10,0,0" Grid.RowSpan="2" Grid.Row="0" Grid.Column="0" VerticalAlignment="Top" FontSize="14" Grid.ColumnSpan="2">
+            <TextBlock TextWrapping="Wrap" 
+                       VerticalAlignment="Top" 
+                       Height="112" 
+                       Margin="7,0,-2,0" 
+                       Grid.Row="0" 
+                       Grid.Column="0" 
+                       FontWeight="Normal">
+                <Run BaselineAlignment="TextTop" 
+                     Text="Porting Assistant for .Net now does not require an AWS profile in order to use the tool. Porting Assistant for .Net does not collect any usage data."/>
+            </TextBlock>
         </GroupBox>
     </Grid>
 </UserControl>
